<resources>
    <string name="app_name">Declaration des Accidents</string>
    <string name="type_seul">Seul</string>
    <string name="type_double">Double</string>
    <string name="type_stationnement">Stationnement</string>
    <string name="title_activity_formulair_ajout">Formulaire d\'ajout</string>
    <string name="title_activity_login">Nouvel Accident</string>
    <string name="add_success">Accident ajouté avec succès</string>
    <string name="title_activity_details">Détail de l\'accident</string>

    <!-- Strings related to form -->
    <string name="prompt_voiture">Voiture</string>
    <string name="prompt_matricule">Matricule</string>
    <string name="prompt_marque">Marque</string>
    <string name="prompt_modele">Modèle</string>
    <string name="prompt_nom">Nom et Prenom</string>
    <string name="prompt_prenom">Prénom</string>
    <string name="prompt_permis">Permis</string>
    <string name="prompt_lieu">Lieu</string>
    <string name="prompt_date">Date</string>>
    <string name="prompt_infos">Informations</string>>
    <string name="prompt_nouveau_ancien">Nouveau permis ?</string>
    <string name="prompt_anciennete">Ancienneté</string>
    <string name="secondVoitureConnu">Connaissez vous l\'autre voiture ?</string>
    <string name="pick_image_intent_text">Prendre une photo</string>
    <string name="action_validation">Valider</string>
    <string name="action_sign_in_short">Valider</string>
    <string name="error_field_required">Ce champs est obligatoire</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_test">Test</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="one">One</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="title_activity_log">Assurances</string>
    <string name="prompt_mantant">Mantant</string>
    <string name="pick_video_intent_text">Prendre une vidéo</string>

    <item type="id" name="glide_tag" />
</resources>
